--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="banner_area">
     	<div class="container bgcars">
         	<h2 class="title" style="color: #FFF">Are You Canadian?</h2>
-            <a href="https://tahead-cautional.icu/click"><button class="button" name="get_start" style="cursor: pointer;">YES</button></a>
-            <a href="https://tahead-cautional.icu/click"><button class="buttonR" name="get_start" style="cursor: pointer;">NO</button></a>
+            <a href="https://rubjerry-soperth.com/click"><button class="button" name="get_start" style="cursor: pointer;">YES</button></a>
+            <a href="https://rubjerry-soperth.com/click"><button class="buttonR" name="get_start" style="cursor: pointer;">NO</button></a>
         </div>
     </div>
     
